[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Scenes/Flower.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Scripts/Canvas.gd" type="Script" id=2]

[node name="Window" type="Node2D"]
script = ExtResource( 2 )
avoid_duration = 0.52

[node name="Flower" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 0 )

[node name="Updater" type="Tween" parent="."]

[connection signal="tween_completed" from="Updater" to="." method="_on_Updater_tween_completed"]
[connection signal="tween_started" from="Updater" to="." method="_on_Updater_tween_started"]
[connection signal="tween_step" from="Updater" to="." method="_on_Updater_tween_step"]
